src/main/default/objects/Quiz_Settings__mdt/Quiz_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Quiz Settings</label>
    <pluralLabel>Quiz Settings</pluralLabel>
</CustomObject>