src/main/default/objects/Quiz_Settings__mdt/fields/Mobile_App_Url__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Url__c</fullName>
    <label>Mobile App Url</label>
    <type>Url</type>
</CustomField>