src/main/default/objects/Quiz_Settings__mdt/fields/Player_App_URL__c.field-meta.xml
<CustomField>
    <fullName>Player_App_URL__c</fullName>
    <label>Player App URL</label>
    <type>Url</type>
</CustomField>