src/main/default/objects/Quiz_Settings__mdt/fields/Player_App_URL_Minified__c.field-meta.xml
<CustomField>
    <fullName>Player_App_URL_Minified__c</fullName>
    <label>Player App URL Minified</label>
    <type>Url</type>
</CustomField>