src/main/default/objects/Quiz_Settings__mdt/fields/Question_Timer__c.field-meta.xml
<CustomField>
    <fullName>Question_Timer__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>Duration of question phase in seconds</inlineHelpText>
    <label>Question Timer</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>