src/main/default/objects/Quiz_Settings__mdt/fields/Quiz_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Quiz_API_Key__c</fullName>
    <label>Quiz API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>